--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     implementation 'com.budiyev.android:circular-progress-bar:1.2.2'
     implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.41"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
 }
